--- a/app/stylesheets/screen.css
+++ b/app/stylesheets/screen.css
@@ -387,7 +387,30 @@ select option {
   }
 }
 
-/* line 378, ../sass/screen.scss */
+@keyframes latido {
+  0% {
+    -webkit-transform: scale(5, 5);
+    -moz-transform: scale(5, 5);
+    -ms-transform: scale(5, 5);
+    -o-transform: scale(5, 5);
+    transform: scale(5, 5);
+  }
+  75% {
+    -webkit-transform: scale(5.2, 5.2);
+    -moz-transform: scale(5.2, 5.2);
+    -ms-transform: scale(5.2, 5.2);
+    -o-transform: scale(5.2, 5.2);
+    transform: scale(5.2, 5.2);
+  }
+  100% {
+    -webkit-transform: scale(5, 5);
+    -moz-transform: scale(5, 5);
+    -ms-transform: scale(5, 5);
+    -o-transform: scale(5, 5);
+    transform: scale(5, 5);
+  }
+}
+/* line 408, ../sass/screen.scss */
 .menu-desktop {
   display: flex;
   flex-direction: column;
@@ -399,7 +422,7 @@ select option {
   width: 1020px;
   height: 100px;
 }
-/* line 389, ../sass/screen.scss */
+/* line 419, ../sass/screen.scss */
 .menu-desktop #menu-desktop-logo {
   background-color: transparent;
   margin-right: 10px;
@@ -417,11 +440,11 @@ select option {
   -o-transition: transform 0.4s ease;
   transition: transform 0.4s ease;
 }
-/* line 416, ../sass/screen.scss */
+/* line 446, ../sass/screen.scss */
 .menu-desktop #menu-desktop-logo:hover {
   cursor: pointer;
 }
-/* line 422, ../sass/screen.scss */
+/* line 452, ../sass/screen.scss */
 .menu-desktop #menu-desktop-right #menu-desktop-upper {
   -webkit-transition: all 0.4s ease;
   -moz-transition: all 0.4s ease;
@@ -430,7 +453,7 @@ select option {
   transition: all 0.4s ease;
   flex: 0;
 }
-/* line 432, ../sass/screen.scss */
+/* line 462, ../sass/screen.scss */
 .menu-desktop #menu-desktop-right #menu-desktop-lower {
   background-color: transparent;
   max-height: 35px;
@@ -443,14 +466,14 @@ select option {
   -o-transition: all .4s ease-in-out;
   transition: all .4s ease-in-out;
 }
-/* line 448, ../sass/screen.scss */
+/* line 478, ../sass/screen.scss */
 .menu-desktop #menu-desktop-right #menu-desktop-lower #menu-desktop-lower-inner {
   max-width: 1000px;
   width: 100%;
   display: flex;
   flex-direction: row;
 }
-/* line 455, ../sass/screen.scss */
+/* line 485, ../sass/screen.scss */
 .menu-desktop #menu-desktop-right #menu-desktop-lower .menu-desktop-btn {
   cursor: pointer;
   font-family: Arial, serif;
@@ -465,59 +488,109 @@ select option {
   transition: opacity .5s ease-in-out;
 }
 @media (max-width: 1000px) {
-  /* line 455, ../sass/screen.scss */
+  /* line 485, ../sass/screen.scss */
   .menu-desktop #menu-desktop-right #menu-desktop-lower .menu-desktop-btn {
     font-size: 14px;
   }
 }
-/* line 483, ../sass/screen.scss */
+/* line 513, ../sass/screen.scss */
 .menu-desktop #menu-desktop-right #menu-desktop-lower .menu-desktop-btn-selected {
   color: #ce5f2d;
   opacity: 1;
 }
-/* line 494, ../sass/screen.scss */
+/* line 524, ../sass/screen.scss */
 .menu-desktop #menu-desktop-right #menu-desktop-lower .menu-desktop-btn:hover {
   color: #ce5f2d;
   opacity: 1;
 }
 
-/* line 512, ../sass/screen.scss */
+/* line 542, ../sass/screen.scss */
 .display-menu-desktop {
   display: none;
 }
 
-/* line 516, ../sass/screen.scss */
+/* line 546, ../sass/screen.scss */
 .display-header {
   display: none;
 }
 
-/* line 521, ../sass/screen.scss */
+/* line 551, ../sass/screen.scss */
 .view-container {
   display: flex;
   margin-top: 15%;
 }
 @media (min-width: 800px) {
-  /* line 521, ../sass/screen.scss */
+  /* line 551, ../sass/screen.scss */
   .view-container {
     margin-top: 140px;
     height: 600px;
   }
 }
 
-/* line 532, ../sass/screen.scss */
+/* line 563, ../sass/screen.scss */
+.view-container.ng-enter {
+  -webkit-animation: view-in 0.5s ease;
+  -o-animation: view-in 0.5s ease;
+  animation: view-in 0.5s ease;
+  position: absolute;
+  width: 100%;
+}
+
+/* line 570, ../sass/screen.scss */
+.view-container.ng-leave {
+  -webkit-animation: view-out 0.5s ease;
+  -o-animation: view-out 0.5s ease;
+  animation: view-out 0.5s ease;
+  position: absolute;
+  width: 100%;
+}
+
+@keyframes view-in {
+  0% {
+    -webkit-transform: translateX(200%);
+    -moz-transform: translateX(200%);
+    -ms-transform: translateX(200%);
+    -o-transform: translateX(200%);
+    transform: translateX(200%);
+  }
+  100% {
+    -webkit-transform: translateX(0%);
+    -moz-transform: translateX(0%);
+    -ms-transform: translateX(0%);
+    -o-transform: translateX(0%);
+    transform: translateX(0%);
+  }
+}
+@keyframes view-out {
+  0% {
+    -webkit-transform: translateX(0%);
+    -moz-transform: translateX(0%);
+    -ms-transform: translateX(0%);
+    -o-transform: translateX(0%);
+    transform: translateX(0%);
+  }
+  100% {
+    -webkit-transform: translateX(-200%);
+    -moz-transform: translateX(-200%);
+    -ms-transform: translateX(-200%);
+    -o-transform: translateX(-200%);
+    transform: translateX(-200%);
+  }
+}
+/* line 616, ../sass/screen.scss */
 h1 {
   font-size: 40px;
   font-weight: bold;
   padding: 10px 0;
 }
 @media (min-width: 800px) {
-  /* line 532, ../sass/screen.scss */
+  /* line 616, ../sass/screen.scss */
   h1 {
     font-size: 76px;
   }
 }
 
-/* line 541, ../sass/screen.scss */
+/* line 625, ../sass/screen.scss */
 h3 {
   font-size: 20px;
   font-weight: bold;
@@ -525,83 +598,83 @@ h3 {
   color: #a1cca5;
 }
 
-/* line 548, ../sass/screen.scss */
+/* line 632, ../sass/screen.scss */
 h5 {
   font-size: 16px;
   font-weight: bold;
 }
 
-/* line 553, ../sass/screen.scss */
+/* line 637, ../sass/screen.scss */
 strong {
   font-weight: bold;
 }
 
-/* line 557, ../sass/screen.scss */
+/* line 641, ../sass/screen.scss */
 .container {
   width: 100%;
   padding: 10px 0;
   text-align: justify;
 }
 
-/* line 563, ../sass/screen.scss */
+/* line 647, ../sass/screen.scss */
 .container-menu-margin {
   margin-top: 50px;
 }
 @media (min-width: 800px) {
-  /* line 563, ../sass/screen.scss */
+  /* line 647, ../sass/screen.scss */
   .container-menu-margin {
     margin-top: 0;
   }
 }
 
-/* line 570, ../sass/screen.scss */
+/* line 654, ../sass/screen.scss */
 .container-color {
   background-color: #eee;
 }
 
-/* line 574, ../sass/screen.scss */
+/* line 658, ../sass/screen.scss */
 .container-info {
   margin: 0 20px;
 }
 @media (min-width: 800px) {
-  /* line 574, ../sass/screen.scss */
+  /* line 658, ../sass/screen.scss */
   .container-info {
     margin: 0 20%;
   }
 }
 
-/* line 581, ../sass/screen.scss */
+/* line 665, ../sass/screen.scss */
 .logo-container {
   text-align: center;
 }
 
-/* line 586, ../sass/screen.scss */
+/* line 670, ../sass/screen.scss */
 .logo-size {
   width: 250px;
   height: 150px;
 }
 @media (min-width: 800px) {
-  /* line 586, ../sass/screen.scss */
+  /* line 670, ../sass/screen.scss */
   .logo-size {
     width: 450px;
     height: 300px;
   }
 }
 
-/* line 595, ../sass/screen.scss */
+/* line 679, ../sass/screen.scss */
 .logo-small {
   width: 90px;
   height: 40px;
 }
 
-/* line 600, ../sass/screen.scss */
+/* line 684, ../sass/screen.scss */
 .menu-principal {
   width: 100%;
   margin-top: 20px;
   text-align: center;
 }
 
-/* line 606, ../sass/screen.scss */
+/* line 690, ../sass/screen.scss */
 .menu-ul {
   width: 250px;
   margin: 0 auto;
@@ -609,7 +682,7 @@ strong {
   flex-direction: column;
 }
 @media (min-width: 800px) {
-  /* line 606, ../sass/screen.scss */
+  /* line 690, ../sass/screen.scss */
   .menu-ul {
     flex-direction: row;
     width: 100%;
@@ -617,13 +690,13 @@ strong {
   }
 }
 
-/* line 618, ../sass/screen.scss */
+/* line 702, ../sass/screen.scss */
 .menu-ul > li {
   padding: 0.5em 0;
   border-bottom: 2px solid #a1cca5;
 }
 @media (min-width: 800px) {
-  /* line 618, ../sass/screen.scss */
+  /* line 702, ../sass/screen.scss */
   .menu-ul > li {
     padding: 0.5em 0.5em;
     border-right: 2px solid #a1cca5;
@@ -631,7 +704,7 @@ strong {
   }
 }
 
-/* line 628, ../sass/screen.scss */
+/* line 712, ../sass/screen.scss */
 .menu-ul > li > a {
   text-decoration: none;
   cursor: pointer;
@@ -639,12 +712,12 @@ strong {
   text-transform: uppercase;
 }
 
-/* line 637, ../sass/screen.scss */
+/* line 721, ../sass/screen.scss */
 .menu-ul > li > a:hover {
   color: #ce5f2d;
 }
 
-/* line 641, ../sass/screen.scss */
+/* line 725, ../sass/screen.scss */
 .arrow-up {
   width: 0;
   height: 0;
@@ -653,7 +726,7 @@ strong {
   border-bottom: 15px solid #a1cca5;
 }
 
-/* line 649, ../sass/screen.scss */
+/* line 733, ../sass/screen.scss */
 .arrow-down {
   width: 0;
   height: 0;
@@ -662,7 +735,7 @@ strong {
   border-top: 15px solid #f00;
 }
 
-/* line 657, ../sass/screen.scss */
+/* line 741, ../sass/screen.scss */
 .arrow-right {
   width: 0;
   height: 0;
@@ -672,7 +745,7 @@ strong {
   margin-left: 5px;
 }
 
-/* line 666, ../sass/screen.scss */
+/* line 750, ../sass/screen.scss */
 .arrow-left {
   width: 0;
   height: 0;
@@ -681,7 +754,7 @@ strong {
   border-right: 15px solid #ce5f2d;
 }
 
-/* line 674, ../sass/screen.scss */
+/* line 758, ../sass/screen.scss */
 .back {
   display: flex;
   justify-content: flex-end;
@@ -690,7 +763,7 @@ strong {
   margin-top: 30px;
 }
 
-/* line 682, ../sass/screen.scss */
+/* line 766, ../sass/screen.scss */
 .btn-action {
   display: flex;
   flex-direction: column;
@@ -699,24 +772,24 @@ strong {
   margin-top: 30px;
 }
 
-/* line 690, ../sass/screen.scss */
+/* line 774, ../sass/screen.scss */
 .back > a, .btn-action > a {
   margin-left: 10px;
   text-decoration: none;
   color: #000;
 }
 
-/* line 696, ../sass/screen.scss */
+/* line 780, ../sass/screen.scss */
 .btn-action > a {
   margin: 5px 0 0 0;
 }
 
-/* line 700, ../sass/screen.scss */
+/* line 784, ../sass/screen.scss */
 .back > a:hover, .btn-action > a:hover {
   color: #ce5f2d;
 }
 
-/* line 704, ../sass/screen.scss */
+/* line 788, ../sass/screen.scss */
 input[type="text"],
 input[type="password"],
 input[type="email"],
@@ -730,14 +803,14 @@ textarea {
   margin: 0 0 10px;
 }
 
-/* line 718, ../sass/screen.scss */
+/* line 802, ../sass/screen.scss */
 label {
   display: inline-block;
   max-width: 100%;
   margin-bottom: 5px;
 }
 
-/* line 725, ../sass/screen.scss */
+/* line 809, ../sass/screen.scss */
 .form-control {
   display: block;
   width: 100%;
@@ -751,21 +824,21 @@ label {
   transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
 
-/* line 742, ../sass/screen.scss */
+/* line 826, ../sass/screen.scss */
 .noticia-container {
   display: flex;
   flex-direction: row;
   margin-bottom: 15px;
 }
 
-/* line 748, ../sass/screen.scss */
+/* line 832, ../sass/screen.scss */
 .show-noticia-container {
   display: flex;
   flex-direction: column;
   margin-bottom: 15px;
 }
 
-/* line 754, ../sass/screen.scss */
+/* line 838, ../sass/screen.scss */
 .noticia-foto {
   /*
   border: 1px solid $color_6;
@@ -775,12 +848,12 @@ label {
   */
 }
 
-/* line 763, ../sass/screen.scss */
+/* line 847, ../sass/screen.scss */
 .show-noticia-foto {
   margin: 30px 0 20px;
 }
 
-/* line 767, ../sass/screen.scss */
+/* line 851, ../sass/screen.scss */
 .noticia-foto > img {
   height: 100px;
   width: 100px;
@@ -791,7 +864,7 @@ label {
   text-align: center;
 }
 
-/* line 777, ../sass/screen.scss */
+/* line 861, ../sass/screen.scss */
 .show-noticia-foto > img {
   height: 200px;
   width: 100%;
@@ -802,27 +875,27 @@ label {
   text-align: center;
 }
 
-/* line 787, ../sass/screen.scss */
+/* line 871, ../sass/screen.scss */
 .noticia-info {
   margin-left: 20px;
 }
 
-/* line 791, ../sass/screen.scss */
+/* line 875, ../sass/screen.scss */
 .show-noticia-info {
   margin: 0 15px;
 }
 
-/* line 795, ../sass/screen.scss */
+/* line 879, ../sass/screen.scss */
 .noticia-info > p, .show-noticia-info > p {
   font-size: 12px;
 }
 
-/* line 799, ../sass/screen.scss */
+/* line 883, ../sass/screen.scss */
 .buscar {
   margin-top: 20px;
 }
 
-/* line 803, ../sass/screen.scss */
+/* line 887, ../sass/screen.scss */
 .buscar-control {
   width: 89%;
   background-image: none;
@@ -832,14 +905,14 @@ label {
 }
 
 @media (min-width: 800px) {
-  /* line 812, ../sass/screen.scss */
+  /* line 896, ../sass/screen.scss */
   .contacto-container {
     flex-direction: row;
     display: flex;
     width: 80%;
   }
 
-  /* line 817, ../sass/screen.scss */
+  /* line 901, ../sass/screen.scss */
   .arrow-contacto {
     border-left: 1px solid #000;
     margin-right: 5%;
@@ -848,7 +921,7 @@ label {
     margin-left: 10%;
   }
 
-  /* line 824, ../sass/screen.scss */
+  /* line 908, ../sass/screen.scss */
   .contacto-controls {
     width: 100%;
     display: flex;
@@ -856,7 +929,7 @@ label {
     align-items: flex-end;
   }
 
-  /* line 830, ../sass/screen.scss */
+  /* line 914, ../sass/screen.scss */
   .contacto-controls > .controls {
     width: 100%;
     display: flex;
@@ -864,13 +937,13 @@ label {
     justify-content: flex-end;
   }
 
-  /* line 836, ../sass/screen.scss */
+  /* line 920, ../sass/screen.scss */
   .contacto-controls > .controls > .form-control {
     display: inline;
     width: 60%;
   }
 }
-/* line 842, ../sass/screen.scss */
+/* line 926, ../sass/screen.scss */
 .sabias-slider {
   display: flex;
   flex-direction: column;
@@ -878,7 +951,7 @@ label {
   width: 100%;
 }
 
-/* line 851, ../sass/screen.scss */
+/* line 935, ../sass/screen.scss */
 .sabias-container {
   height: 300px;
   width: 350px;
@@ -888,13 +961,13 @@ label {
   border-radius: 20px;
 }
 @media (min-width: 800px) {
-  /* line 851, ../sass/screen.scss */
+  /* line 935, ../sass/screen.scss */
   .sabias-container {
     width: 500px;
   }
 }
 
-/* line 863, ../sass/screen.scss */
+/* line 947, ../sass/screen.scss */
 .sabias-container-2 {
   height: 278px;
   width: 328px;
@@ -905,20 +978,20 @@ label {
   margin: 10px;
 }
 @media (min-width: 800px) {
-  /* line 863, ../sass/screen.scss */
+  /* line 947, ../sass/screen.scss */
   .sabias-container-2 {
     width: 478px;
   }
 }
 
-/* line 876, ../sass/screen.scss */
+/* line 960, ../sass/screen.scss */
 .slider-indicator {
   display: flex;
   justify-content: center;
   width: 100%;
 }
 
-/* line 882, ../sass/screen.scss */
+/* line 966, ../sass/screen.scss */
 .slider_1, .slider_2, .slider_3, .slider_4 {
   border: 1px solid #333;
   border-radius: 10px;
@@ -928,13 +1001,13 @@ label {
   margin: 10px;
 }
 
-/* line 891, ../sass/screen.scss */
+/* line 975, ../sass/screen.scss */
 .slider_selected {
   background-color: #8CC63F;
   border: 1px solid #fff;
 }
 
-/* line 898, ../sass/screen.scss */
+/* line 982, ../sass/screen.scss */
 .footer {
   font-family: Arial, serif;
   font-size: 16px;
@@ -946,7 +1019,7 @@ label {
   height: 160px;
 }
 @media (min-width: 800px) {
-  /* line 898, ../sass/screen.scss */
+  /* line 982, ../sass/screen.scss */
   .footer {
     position: relative;
     bottom: 0;
@@ -955,19 +1028,19 @@ label {
   }
 }
 
-/* line 916, ../sass/screen.scss */
+/* line 1000, ../sass/screen.scss */
 .footer > p {
   margin: 35px 50px;
   text-align: center;
 }
 @media (min-width: 800px) {
-  /* line 916, ../sass/screen.scss */
+  /* line 1000, ../sass/screen.scss */
   .footer > p {
     margin: 10px 0;
   }
 }
 
-/* line 924, ../sass/screen.scss */
+/* line 1008, ../sass/screen.scss */
 .footer > p > a {
   text-decoration: none;
   color: #ce5f2d;
